ajout d'image pour srcset + fix bug CSS

--- a/cv_site/index.html
+++ b/cv_site/index.html
@@ -132,7 +132,7 @@
 
 			<div id="flex_container">
 
-				<img id="landing_image" src="./img/ref/moi_fond_bleu.png" alt="Photo de moi avec un fond bleu" width="563" height="750">
+				<img id="landing_image" src="./img/ref/moi_fond_bleu.png" srcset="./img/ref/moi_fond_bleu.png 750w, ./img/ref/moi_fond_bleu_1025.png 1025w, ./img/ref/moi_fond_bleu_682.png 682w" sizes="(min-width: 1175px) 45vw, 100vw" alt="Photo de moi avec un fond bleu">
 
 				<ul id="informations">
 
@@ -171,7 +171,7 @@
 			</ul>
 			<div id="skills_image">
 
-				<img id="skills" src="./img/ref/moi_fond_rose.png" alt="Photo de moi avec un fond rose" height="1022" width="1362">
+				<img id="skills" src="./img/ref/moi_fond_rose.png" alt="Photo de moi avec un fond rose" srcset="./img/ref/moi_fond_rose.png 1362w, ./img/ref/moi_fond_rose_682.png 682w, ./img/ref/moi_fond_rose_1025.png 1025w" sizes="100vw">
 
 				<div id="competences_text">
 
@@ -294,7 +294,7 @@
 
 						<ul>
 							<li id="html" class="image_container">
-								<img src="./img/ref/html.svg" alt="Image de HTML" height="260" width="440">
+								<img src="./img/ref/html.svg" srcset="./img/ref/html_680.svg 680w, ./img/ref/html.svg 440w" sizes="(min-width: 1500px) 20vh, (max-width: 750px) 100vw" alt="Image de HTML" height="260">
 							</li>
 
 						</ul>
@@ -306,7 +306,7 @@
 						<ul>
 
 							<li id="css" class="image_container">
-								<img src="./img/ref/css.svg" alt="Image de CSS" height="260" width="440">
+								<img src="./img/ref/css.svg" srcset="./img/ref/css_680.svg 680w, ./img/ref/css.svg 440w" sizes="(min-width: 1500px) 20vh, (max-width: 750px) 100vw" alt="Image de CSS" height="260">
 							</li>
 
 						</ul>
@@ -317,7 +317,7 @@
 
 						<ul>
 							<li id="javascript" class="image_container">
-								<img src="./img/ref/js.svg" alt="Image de Javascript" height="260" width="440">
+								<img src="./img/ref/js.svg" srcset="./img/ref/js_680.svg 680w, ./img/ref/js.svg 440w" sizes="(min-width: 1500px) 20vh, (max-width: 750px) 100vw" alt="Image de Javascript" height="260">
 							</li>
 
 						</ul>
@@ -328,7 +328,7 @@
 
 						<ul>
 							<li id="php" class="image_container">
-								<img  src="./img/ref/php.svg" alt="Image de PHP" height="260" width="440">
+								<img  src="./img/ref/php.svg" srcset="./img/ref/php_680.svg 680w, ./img/ref/php.svg 440w" sizes="(min-width: 1500px) 20vh, (max-width: 750px) 100vw" alt="Image de PHP" height="260">
 							</li>
 
 						</ul>
