changement dossier img en asset

--- a/cv_site/index.html
+++ b/cv_site/index.html
@@ -24,10 +24,10 @@
 				<span></span>
 			</div>
 
-			<img id="logo" src="./img/icons/logo.svg" alt="Logo du site" width="40" height="40">
-			<img id="secondlogo" src="./img/icons/logo2.svg" alt="Logo de mon prénom avec un cheval à côté" width="118" height="40">
+			<img id="logo" src="assets/icons/logo.svg" alt="Logo du site" width="40" height="40">
+			<img id="secondlogo" src="assets/icons/logo2.svg" alt="Logo de mon prénom avec un cheval à côté" width="118" height="40">
 			<div id="last_item">
-				<img id="basket" src="./img/ref/panier.svg" alt="Panier" height="35" width="27">
+				<img id="basket" src="assets/ref/panier.svg" alt="Panier" height="35" width="27">
 				<span id="article_number">0</span>
 			</div>
 
@@ -35,7 +35,7 @@
 			<ul id="nav_list">
 				<li id="first_nav_list_item">
 					Mes services
-					<img id="nav_first_arrow" src="./img/icons/fleche.svg" alt="Une croix blanche" width="16" height="10">
+					<img id="nav_first_arrow" src="assets/icons/fleche.svg" alt="Une croix blanche" width="16" height="10">
 
 					<ul id="first_dropdown" class="no_display">
 						<li><a title="Aller vers la section de mes services" href="#choice" hreflang="fr">Cr&eacute;er un site web</a></li>
@@ -48,7 +48,7 @@
 
 				<li id="second_nav_list_item">
 					Mes comp&eacute;tences
-					<img id="nav_second_arrow" src="./img/icons/fleche.svg" alt="Une croix blanche" width="16" height="10">
+					<img id="nav_second_arrow" src="assets/icons/fleche.svg" alt="Une croix blanche" width="16" height="10">
 
 					<ul id="second_dropdown" class="no_display">
 						<li><a title="Aller vers la section de mes compétences" href="#competences" hreflang="fr"><abbr lang="en" title="User Interface">UI</abbr></a></li>
@@ -61,7 +61,7 @@
 
 				<li id="third_nav_list_item">
 					Mes formations
-					<img id="nav_third_arrow" src="./img/icons/fleche.svg" alt="Une croix blanche" width="16" height="10">
+					<img id="nav_third_arrow" src="assets/icons/fleche.svg" alt="Une croix blanche" width="16" height="10">
 
 					<ul class="no_display" id="third_dropdown">
 						<li><a title="Aller vers la section de mes formations" href="#formations" hreflang="fr">&Eacute;tudes sup&eacute;rieures :&nbsp;<abbr title="Haute Ecole de la Province de Liège">HEPL</abbr>, Seraing</a></li>
@@ -75,7 +75,7 @@
 
 				<li id="fourth_nav_list_item">
 					Mes langages maîtris&eacute;s
-					<img id="nav_fourth_arrow" src="./img/icons/fleche.svg" alt="Une croix blanche" width="16" height="10">
+					<img id="nav_fourth_arrow" src="assets/icons/fleche.svg" alt="Une croix blanche" width="16" height="10">
 
 					<ul class="no_display" id="fourth_dropdown">
 						<li><a title="Aller vers la section de mes langages maîtrisés" href="#langages" hreflang="fr"><abbr lang="en" title="Hyper Text Markup Language">HTML</abbr></a></li>
@@ -88,7 +88,7 @@
 
 				<li id="fifth_nav_list_item">
 					Mes soft skills
-					<img id="nav_fifth_arrow" src="./img/icons/fleche.svg" alt="Une croix blanche" width="16" height="10">
+					<img id="nav_fifth_arrow" src="assets/icons/fleche.svg" alt="Une croix blanche" width="16" height="10">
 
 					<ul class="no_display" id="fifth_dropdown">
 						<li><a title="Aller vers la section de mes soft skills" href="#soft_skills" hreflang="fr">Cr&eacute;ativit&eacute;</a></li>
@@ -132,7 +132,7 @@
 
 			<div id="flex_container">
 
-				<img id="landing_image" src="./img/ref/moi_fond_bleu.png" srcset="./img/ref/moi_fond_bleu.png 750w, ./img/ref/moi_fond_bleu_1025.png 1025w, ./img/ref/moi_fond_bleu_682.png 682w" sizes="(min-width: 1175px) 45vw, 100vw" alt="Photo de moi avec un fond bleu">
+				<img id="landing_image" src="assets/ref/moi_fond_bleu.png" srcset="assets/ref/moi_fond_bleu.png 750w, assets/ref/moi_fond_bleu_1025.png 1025w, assets/ref/moi_fond_bleu_682.png 682w" sizes="(min-width: 1175px) 45vw, 100vw" alt="Photo de moi avec un fond bleu">
 
 				<ul id="informations">
 
@@ -142,16 +142,16 @@
 					<li id="choice">Choississez un service</li>
 					<li>
 						<ul id="services_list">
-							<li id="www" data-name="Créer votre site web"><img id="www_image" src="./img/icons/www.svg" alt="Image du World Wide Web" width="55" height="39"></li>
-							<li id="pencil" data-name="Styliser votre site web"><img id="pencil_image" src="./img/icons/design.svg" alt="Image d'un pinceau" width="55" height="39"></li>
-							<li id="responsive" data-name="Rendre votre site responsive"><img id="responsive_image" src="./img/icons/responsive.svg" alt="Image d'un PC, d'une tablette et d'un téléphone" width="55" height="39"></li>
-							<li id="ranking" data-name="Améliorer le référencement de votre site"><img id="ranking_image" src="./img/icons/referencement.svg" alt="Image d'une loupe" width="55" height="39"></li>
+							<li id="www" data-name="Créer votre site web"><img id="www_image" src="assets/icons/www.svg" alt="Image du World Wide Web" width="55" height="39"></li>
+							<li id="pencil" data-name="Styliser votre site web"><img id="pencil_image" src="assets/icons/design.svg" alt="Image d'un pinceau" width="55" height="39"></li>
+							<li id="responsive" data-name="Rendre votre site responsive"><img id="responsive_image" src="assets/icons/responsive.svg" alt="Image d'un PC, d'une tablette et d'un téléphone" width="55" height="39"></li>
+							<li id="ranking" data-name="Améliorer le référencement de votre site"><img id="ranking_image" src="assets/icons/referencement.svg" alt="Image d'une loupe" width="55" height="39"></li>
 						</ul>
 					</li>
 
 					<li><p title="Aller vers la section pour me contacter" id="contact">Me contacter</p></li><!--
 
-					--><li><img id="projects_number" src="./img/ref/projets.svg" alt="Image PEGI" height="80" width="60"></li>
+					--><li><img id="projects_number" src="assets/ref/projets.svg" alt="Image PEGI" height="80" width="60"></li>
 
 			</ul>
 
@@ -171,7 +171,7 @@
 			</ul>
 			<div id="skills_image">
 
-				<img id="skills" src="./img/ref/moi_fond_rose.png" alt="Photo de moi avec un fond rose" srcset="./img/ref/moi_fond_rose.png 1362w, ./img/ref/moi_fond_rose_682.png 682w, ./img/ref/moi_fond_rose_1025.png 1025w" sizes="100vw">
+				<img id="skills" src="assets/ref/moi_fond_rose.png" alt="Photo de moi avec un fond rose" srcset="assets/ref/moi_fond_rose.png 1362w, assets/ref/moi_fond_rose_682.png 682w, assets/ref/moi_fond_rose_1025.png 1025w" sizes="100vw">
 
 				<div id="competences_text">
 
@@ -202,7 +202,7 @@
 					<li id="hepl">
 
 						<ul>
-							<li><img id="hepl_logo" src="./img/ref/hepl.svg" alt="Image du logo de la HEPL" height="225" width="380"></li>
+							<li><img id="hepl_logo" src="assets/ref/hepl.svg" alt="Image du logo de la HEPL" height="225" width="380"></li>
 
 							<li><h3>&Eacute;tudes sup&eacute;rieures :&nbsp;<abbr lang="fr" title="Haute Ecole de la Province de Liège">HEPL</abbr>, Seraing</h3></li>
 
@@ -220,7 +220,7 @@
 
 						<ul>
 
-							<li><img id="online_training" src="./img/ref/formation.svg" alt="Logo de formations en ligne" height="225" width="380"></li>
+							<li><img id="online_training" src="assets/ref/formation.svg" alt="Logo de formations en ligne" height="225" width="380"></li>
 
 							<li><h3>Formation en ligne :&nbsp;<abbr lang="fr" title="Deux dimensions">2D</abbr></h3></li>
 
@@ -238,7 +238,7 @@
 
 						<ul>
 
-							<li><img id="sainte_croix" src="./img/ref/helmo.svg" alt="Photo de l'école de Sainte-Croix" height="225" width="380"></li>
+							<li><img id="sainte_croix" src="assets/ref/helmo.svg" alt="Photo de l'école de Sainte-Croix" height="225" width="380"></li>
 
 							<li><h3>&Eacute;tudes sup&eacute;rieures :&nbsp;Sainte&ndash;Croix, Li&egrave;ge</h3></li>
 
@@ -256,7 +256,7 @@
 
 						<ul>
 
-							<li><img id="saint_louis" src="./img/ref/secondaire.svg" alt="Photo de l'école de Saint-Louis" height="225" width="380"></li>
+							<li><img id="saint_louis" src="assets/ref/secondaire.svg" alt="Photo de l'école de Saint-Louis" height="225" width="380"></li>
 
 							<li><h3>&Eacute;tudes secondaires :&nbsp;Saint&ndash;Louis, Waremme</h3></li>
 
@@ -294,7 +294,7 @@
 
 						<ul>
 							<li id="html" class="image_container">
-								<img src="./img/ref/html.svg" srcset="./img/ref/html_680.svg 680w, ./img/ref/html.svg 440w" sizes="(min-width: 1500px) 20vh, (max-width: 750px) 100vw" alt="Image de HTML" height="260">
+								<img src="assets/ref/html.svg" srcset="assets/ref/html_680.svg 680w, assets/ref/html.svg 440w" sizes="(min-width: 1500px) 20vh, (max-width: 750px) 100vw" alt="Image de HTML" height="260">
 							</li>
 
 						</ul>
@@ -306,7 +306,7 @@
 						<ul>
 
 							<li id="css" class="image_container">
-								<img src="./img/ref/css.svg" srcset="./img/ref/css_680.svg 680w, ./img/ref/css.svg 440w" sizes="(min-width: 1500px) 20vh, (max-width: 750px) 100vw" alt="Image de CSS" height="260">
+								<img src="assets/ref/css.svg" srcset="assets/ref/css_680.svg 680w, assets/ref/css.svg 440w" sizes="(min-width: 1500px) 20vh, (max-width: 750px) 100vw" alt="Image de CSS" height="260">
 							</li>
 
 						</ul>
@@ -317,7 +317,7 @@
 
 						<ul>
 							<li id="javascript" class="image_container">
-								<img src="./img/ref/js.svg" srcset="./img/ref/js_680.svg 680w, ./img/ref/js.svg 440w" sizes="(min-width: 1500px) 20vh, (max-width: 750px) 100vw" alt="Image de Javascript" height="260">
+								<img src="assets/ref/js.svg" srcset="assets/ref/js_680.svg 680w, assets/ref/js.svg 440w" sizes="(min-width: 1500px) 20vh, (max-width: 750px) 100vw" alt="Image de Javascript" height="260">
 							</li>
 
 						</ul>
@@ -328,7 +328,7 @@
 
 						<ul>
 							<li id="php" class="image_container">
-								<img  src="./img/ref/php.svg" srcset="./img/ref/php_680.svg 680w, ./img/ref/php.svg 440w" sizes="(min-width: 1500px) 20vh, (max-width: 750px) 100vw" alt="Image de PHP" height="260">
+								<img src="assets/ref/php.svg" srcset="assets/ref/php_680.svg 680w, assets/ref/php.svg 440w" sizes="(min-width: 1500px) 20vh, (max-width: 750px) 100vw" alt="Image de PHP" height="260">
 							</li>
 
 						</ul>
@@ -358,11 +358,11 @@
 
 			<h1 class="hidden">Mes hobbies</h1>
 
-			<img id="hobbies_button" src="./img/ref/hobby.svg" width="90" height="90" alt="La lettre H dans une étoile">
+			<img id="hobbies_button" src="assets/ref/hobby.svg" width="90" height="90" alt="La lettre H dans une étoile">
 			<div id="overlay" class="no_display"></div>
 			<ul class="no_display" id="hobbies_list">
 
-				<li><img id="close2" src="./img/icons/croixblanche.svg" alt="Une croix blanche" width="13" height="13"></li>
+				<li><img id="close2" src="assets/icons/croixblanche.svg" alt="Une croix blanche" width="13" height="13"></li>
 
 				<li>
 
@@ -412,8 +412,8 @@
 
 			<ul id="article_hover" class="no_display">
 
-				<li><img id="close1" src="./img/icons/croixnoire.svg" alt="Une croix noire" width="13"
-				height="13"></li>
+				<li><img id="close1" src="assets/icons/croixnoire.svg" alt="Une croix noire" width="13"
+						 height="13"></li>
 
 				<li><img id="content_profile" src="#" alt="Image de moi en monstre" height="" width=""></li>
 
@@ -511,7 +511,7 @@
 			</select>
 			<div id="select_js_enabled" class="no_display">
 				<p id="language_chosen">Fançais</p>
-				<img src="./img/icons/fleche_blanche.svg" alt="Une flèche blanche" width="16" height="10">
+				<img src="assets/icons/fleche_blanche.svg" alt="Une flèche blanche" width="16" height="10">
 				<div id="select_options" class="no_display">
 					<p data-name="Français">Fran&ccedil;ais</p>
 					<p data-name="English">English</p>
