--- a/cv_site/index.html
+++ b/cv_site/index.html
@@ -202,7 +202,7 @@
 					<li id="hepl">
 
 						<ul>
-							<li><img id="hepl_logo" src="assets/ref/hepl.svg" alt="Image du logo de la HEPL" height="225" width="380"></li>
+							<li><img id="hepl_logo" src="assets/ref/hepl.png" srcset="assets/ref/hepl_1000.png 1000w, assets/ref/hepl.png 1200w" sizes="(min-width: 1500px) 30.5%, (max-width: 750px) 360px" alt="Image du logo de la HEPL"></li>
 
 							<li><h3>&Eacute;tudes sup&eacute;rieures :&nbsp;<abbr lang="fr" title="Haute Ecole de la Province de Liège">HEPL</abbr>, Seraing</h3></li>
 
@@ -220,7 +220,7 @@
 
 						<ul>
 
-							<li><img id="online_training" src="assets/ref/formation.svg" alt="Logo de formations en ligne" height="225" width="380"></li>
+							<li><img id="online_training" src="assets/ref/formation.svg" alt="Image d'un clavier" srcset="assets/ref/formation_1200.svg 1200w, assets/ref/formation.svg 1000w" sizes="(min-width: 1500px) 30.5%, (max-width: 750px) 360px"></li>
 
 							<li><h3>Formation en ligne :&nbsp;<abbr lang="fr" title="Deux dimensions">2D</abbr></h3></li>
 
@@ -238,7 +238,7 @@
 
 						<ul>
 
-							<li><img id="sainte_croix" src="assets/ref/helmo.svg" alt="Photo de l'école de Sainte-Croix" height="225" width="380"></li>
+							<li><img id="sainte_croix" src="assets/ref/helmo.svg" alt="Logo de HELMO" srcset="assets/ref/helmo_1000.svg 1000w, assets/ref/helmo.svg 360w" sizes="(min-width: 1500px) 30.5%, (max-width: 750px) 360px"></li>
 
 							<li><h3>&Eacute;tudes sup&eacute;rieures :&nbsp;Sainte&ndash;Croix, Li&egrave;ge</h3></li>
 
@@ -256,7 +256,7 @@
 
 						<ul>
 
-							<li><img id="saint_louis" src="assets/ref/secondaire.svg" alt="Photo de l'école de Saint-Louis" height="225" width="380"></li>
+							<li><img id="saint_louis" src="assets/ref/secondaire.jpeg" alt="Photo de l'école de Saint-Louis" srcset="assets/ref/secondaire_1200.jpg 1200w, assets/ref/secondaire.jpeg 2560w" sizes="(min-width: 1500px) 30.5%, (max-width: 750px) 360px"></li>
 
 							<li><h3>&Eacute;tudes secondaires :&nbsp;Saint&ndash;Louis, Waremme</h3></li>
 
@@ -294,7 +294,7 @@
 
 						<ul>
 							<li id="html" class="image_container">
-								<img src="assets/ref/html.svg" srcset="assets/ref/html_680.svg 680w, assets/ref/html.svg 440w" sizes="(min-width: 1500px) 20vh, (max-width: 750px) 100vw" alt="Image de HTML" height="260">
+								<img src="assets/ref/html.svg" srcset="assets/ref/html_1000.svg 1000w, assets/ref/html_680.svg 680w, assets/ref/html.svg 440w" sizes="(min-width: 1500px) 30.5%, (max-width: 750px) 100vw" alt="Image de HTML">
 							</li>
 
 						</ul>
@@ -306,7 +306,7 @@
 						<ul>
 
 							<li id="css" class="image_container">
-								<img src="assets/ref/css.svg" srcset="assets/ref/css_680.svg 680w, assets/ref/css.svg 440w" sizes="(min-width: 1500px) 20vh, (max-width: 750px) 100vw" alt="Image de CSS" height="260">
+								<img src="assets/ref/css.svg" srcset="assets/ref/css_1000.svg 1000w, assets/ref/css_680.svg 680w, assets/ref/css.svg 440w" sizes="(min-width: 1500px) 30.5%, (max-width: 750px) 100vw" alt="Image de CSS">
 							</li>
 
 						</ul>
@@ -317,7 +317,7 @@
 
 						<ul>
 							<li id="javascript" class="image_container">
-								<img src="assets/ref/js.svg" srcset="assets/ref/js_680.svg 680w, assets/ref/js.svg 440w" sizes="(min-width: 1500px) 20vh, (max-width: 750px) 100vw" alt="Image de Javascript" height="260">
+								<img src="assets/ref/js.svg" srcset="assets/ref/js_1000.svg 1000w, assets/ref/js_680.svg 680w, assets/ref/js.svg 440w" sizes="(min-width: 1500px) 30.5%, (max-width: 750px) 100vw" alt="Image de Javascript">
 							</li>
 
 						</ul>
@@ -328,7 +328,7 @@
 
 						<ul>
 							<li id="php" class="image_container">
-								<img src="assets/ref/php.svg" srcset="assets/ref/php_680.svg 680w, assets/ref/php.svg 440w" sizes="(min-width: 1500px) 20vh, (max-width: 750px) 100vw" alt="Image de PHP" height="260">
+								<img src="assets/ref/php.svg" srcset="assets/ref/php_1000.svg 1000w, assets/ref/php_680.svg 680w, assets/ref/php.svg 440w" sizes="(min-width: 1500px) 30.5%, (max-width: 750px) 100vw" alt="Image de PHP">
 							</li>
 
 						</ul>
@@ -415,7 +415,7 @@
 				<li><img id="close1" src="assets/icons/croixnoire.svg" alt="Une croix noire" width="13"
 						 height="13"></li>
 
-				<li><img id="content_profile" src="#" alt="Image de moi en monstre" height="" width=""></li>
+				<li><img id="content_profile" src="./assets/ref/moi_fond_bleu.png" alt="Image de moi en monstre" height="750" width="563"></li>
 
 				<li>
 					<ul id="summary">
