--- a/cv_site/index.html
+++ b/cv_site/index.html
@@ -202,7 +202,7 @@
 					<li id="hepl">
 
 						<ul>
-							<li><img id="hepl_logo" src="assets/ref/hepl.png" srcset="assets/ref/hepl_1000.png 1000w, assets/ref/hepl.png 1200w" sizes="(min-width: 1500px) 30.5%, (max-width: 750px) 360px" alt="Image du logo de la HEPL"></li>
+							<li><img id="hepl_logo" src="assets/ref/hepl.jpeg" srcset="assets/ref/hepl_1000.png 1000w, assets/ref/hepl.jpeg 4096w" sizes="(min-width: 1500px) 30.5%, (max-width: 750px) 100vh" alt="Image du logo de la HEPL"></li>
 
 							<li><h3>&Eacute;tudes sup&eacute;rieures :&nbsp;<abbr lang="fr" title="Haute Ecole de la Province de Liège">HEPL</abbr>, Seraing</h3></li>
 
@@ -220,7 +220,7 @@
 
 						<ul>
 
-							<li><img id="online_training" src="assets/ref/formation.svg" alt="Image d'un clavier" srcset="assets/ref/formation_1200.svg 1200w, assets/ref/formation.svg 1000w" sizes="(min-width: 1500px) 30.5%, (max-width: 750px) 360px"></li>
+							<li><img id="online_training" src="assets/ref/formation.svg" alt="Image du texte online training" srcset="assets/ref/formation_2000.svg 2000w, assets/ref/formation_1200.svg 1200w, assets/ref/formation.svg 380w" sizes="(min-width: 1500px) 30.5%, (max-width: 750px) 100vh"></li>
 
 							<li><h3>Formation en ligne :&nbsp;<abbr lang="fr" title="Deux dimensions">2D</abbr></h3></li>
 
@@ -238,7 +238,7 @@
 
 						<ul>
 
-							<li><img id="sainte_croix" src="assets/ref/helmo.svg" alt="Logo de HELMO" srcset="assets/ref/helmo_1000.svg 1000w, assets/ref/helmo.svg 360w" sizes="(min-width: 1500px) 30.5%, (max-width: 750px) 360px"></li>
+							<li><img id="sainte_croix" src="assets/ref/helmo.svg" alt="Logo de HELMO" srcset="assets/ref/helmo_2000.svg 2000w, assets/ref/helmo_1000.svg 1000w, assets/ref/helmo.svg 360w" sizes="(min-width: 1500px) 30.5%, (max-width: 750px) 100vh"></li>
 
 							<li><h3>&Eacute;tudes sup&eacute;rieures :&nbsp;Sainte&ndash;Croix, Li&egrave;ge</h3></li>
 
@@ -256,7 +256,7 @@
 
 						<ul>
 
-							<li><img id="saint_louis" src="assets/ref/secondaire.jpeg" alt="Photo de l'école de Saint-Louis" srcset="assets/ref/secondaire_1200.jpg 1200w, assets/ref/secondaire.jpeg 2560w" sizes="(min-width: 1500px) 30.5%, (max-width: 750px) 360px"></li>
+							<li><img id="saint_louis" src="assets/ref/secondaire.jpeg" alt="Photo de l'école de Saint-Louis" srcset="assets/ref/secondaire_1200.jpg 1200w, assets/ref/secondaire.jpeg 2560w" sizes="(min-width: 1500px) 30.5%, (max-width: 750px) 100vh"></li>
 
 							<li><h3>&Eacute;tudes secondaires :&nbsp;Saint&ndash;Louis, Waremme</h3></li>
 
