--- a/cv_site/index.html
+++ b/cv_site/index.html
@@ -220,7 +220,7 @@
 
 						<ul>
 
-							<li><img id="online_training" src="assets/ref/formation.svg" alt="Image du texte online training" srcset="assets/ref/formation_2000.svg 2000w, assets/ref/formation_1200.svg 1200w, assets/ref/formation.svg 380w" sizes="(min-width: 1500px) 30.5%, (max-width: 750px) 100vh"></li>
+							<li><img id="online_training" src="assets/ref/formation.png" alt="Image du texte online training" srcset="assets/ref/formation_2000.png 2000w, assets/ref/formation_1200.png 1200w, assets/ref/formation.png 380w" sizes="(min-width: 1500px) 30.5%, (max-width: 750px) 100vh"></li>
 
 							<li><h3>Formation en ligne :&nbsp;<abbr lang="fr" title="Deux dimensions">2D</abbr></h3></li>
 
@@ -238,7 +238,7 @@
 
 						<ul>
 
-							<li><img id="sainte_croix" src="assets/ref/helmo.svg" alt="Logo de HELMO" srcset="assets/ref/helmo_2000.svg 2000w, assets/ref/helmo_1000.svg 1000w, assets/ref/helmo.svg 360w" sizes="(min-width: 1500px) 30.5%, (max-width: 750px) 100vh"></li>
+							<li><img id="sainte_croix" src="assets/ref/helmo.png" alt="Logo de HELMO" srcset="assets/ref/helmo_2000.png 2000w, assets/ref/helmo_1000.png 1000w, assets/ref/helmo.png 360w" sizes="(min-width: 1500px) 30.5%, (max-width: 750px) 100vh"></li>
 
 							<li><h3>&Eacute;tudes sup&eacute;rieures :&nbsp;Sainte&ndash;Croix, Li&egrave;ge</h3></li>
 
