--- a/cv_site/index.html
+++ b/cv_site/index.html
@@ -134,10 +134,10 @@
 
 				<img id="landing_image" src="assets/ref/moi_fond_bleu.png" srcset="assets/ref/moi_fond_bleu.png 750w, assets/ref/moi_fond_bleu_1025.png 1025w, assets/ref/moi_fond_bleu_682.png 682w" sizes="(min-width: 1175px) 45vw, 100vw" alt="Photo de moi avec un fond bleu">
 
-				<ul id="informations">
+				<ul id="informations" itemscope itemtype="https://schema.org/Person">
 
-					<li itemprop="gender" id="gender">Homme</li>
-					<li><strong><span itemprop="givenName">Marvin</span> <span id="lastname" itemprop="familyName">Pagnoul</span></strong></li>
+					<li id="jobTitle" lang="en"><span itemprop="jobTitle">Web developer</span></li>
+					<li><strong><span itemprop="name">Marvin</span> <span id="lastname" itemprop="familyName">Pagnoul</span></strong></li>
 					<li id="tariff">75&euro;&frasl;h</li>
 					<li id="choice">Choississez un service</li>
 					<li>
@@ -526,7 +526,7 @@
 			</ul>
 		</div>
 
-		<ul id="grid_container">
+		<ul id="grid_container" itemscope itemtype="https://schema.org/Person">
 
 			<li id="site_explanation">
 				<p>
@@ -540,9 +540,9 @@
 			<li><a id="languages_footer" title="Retourner vers mes langages maîtrisés" href="#langages" hreflang="fr">Mes langages ma&icirc;tris&eacute;s</a></li>
 			<li><a id="softskills_footer" title="Retourner vers mes soft skills" href="#soft_skills" hreflang="fr">Mes soft skills</a></li>
 
-			<li id="mail_footer" itemprop="email">marvinpagnoul@icloud.com</li>
-			<li id="tel_footer" itemprop="telephone">04 94 16 40 75</li>
-			<li id="adress_footer" itemprop="address">Rue Louis Happart, 15 THYS</li>
+			<li id="mail_footer"><span itemprop="email">marvinpagnoul@icloud.com</span></li>
+			<li id="tel_footer"><span itemprop="telephone">04 94 16 40 75</span></li>
+			<li id="adress_footer"><span itemprop="address">Rue Louis Happart, 15 THYS</span></li>
 		</ul>
 
 	</footer>
