--- a/cv_site/index.html
+++ b/cv_site/index.html
@@ -16,7 +16,7 @@
 
 	<header>
 
-		<nav id="main_nav">
+		<nav id="main_nav" class="no-js-main-nav">
 
 			<h1 class="hidden">Navigation principale</h1>
 
@@ -26,18 +26,17 @@
 
 			<img id="logo" src="assets/icons/logo.svg" alt="Logo du site" width="40" height="40">
 			<img id="secondlogo" src="assets/icons/logo2.svg" alt="Logo de mon prénom avec un cheval à côté" width="118" height="40">
-			<div id="last_item">
+			<div id="last_item" class="no-js-relative">
 				<img id="basket" src="assets/ref/panier.svg" alt="Panier" height="35" width="27">
-				<span id="article_number">0</span>
+				<span id="article_number" class="no-js-article-number">0</span>
 			</div>
 
-
-			<ul id="nav_list">
+			<ul id="nav_list" class="no-js-nav">
 				<li id="first_nav_list_item">
 					Mes services
-					<img id="nav_first_arrow" src="assets/icons/fleche.svg" alt="Une croix blanche" width="16" height="10">
+					<img class="arrow" id="nav_first_arrow" src="assets/icons/fleche.svg" alt="Une croix blanche" width="16" height="10">
 
-					<ul id="first_dropdown" class="no_display">
+					<ul class="no-js-dropdown no_display" id="first_dropdown">
 						<li><a title="Aller vers la section de mes services" href="#choice" hreflang="fr">Cr&eacute;er un site web</a></li>
 						<li><a title="Aller vers la section de mes services" href="#choice" hreflang="fr">Cr&eacute;er un design</a></li>
 						<li><a title="Aller vers la section de mes services" href="#choice" hreflang="fr">R&eacute;aliser du responsive web design</a></li>
@@ -48,9 +47,9 @@
 
 				<li id="second_nav_list_item">
 					Mes comp&eacute;tences
-					<img id="nav_second_arrow" src="assets/icons/fleche.svg" alt="Une croix blanche" width="16" height="10">
+					<img class="arrow" id="nav_second_arrow" src="assets/icons/fleche.svg" alt="Une croix blanche" width="16" height="10">
 
-					<ul id="second_dropdown" class="no_display">
+					<ul  class="no-js-dropdown no_display" id="second_dropdown">
 						<li><a title="Aller vers la section de mes compétences" href="#competences" hreflang="fr"><abbr lang="en" title="User Interface">UI</abbr></a></li>
 						<li><a title="Aller vers la section de mes compétences" href="#competences" hreflang="fr"><abbr lang="en" title="User EXperience">UX</abbr></a></li>
 						<li><a title="Aller vers la section de mes compétences" href="#competences" hreflang="fr">Front&ndash;End</a></li>
@@ -61,9 +60,9 @@
 
 				<li id="third_nav_list_item">
 					Mes formations
-					<img id="nav_third_arrow" src="assets/icons/fleche.svg" alt="Une croix blanche" width="16" height="10">
+					<img class="arrow" id="nav_third_arrow" src="assets/icons/fleche.svg" alt="Une croix blanche" width="16" height="10">
 
-					<ul class="no_display" id="third_dropdown">
+					<ul class="no-js-dropdown no_display" id="third_dropdown">
 						<li><a title="Aller vers la section de mes formations" href="#formations" hreflang="fr">&Eacute;tudes sup&eacute;rieures :&nbsp;<abbr title="Haute Ecole de la Province de Liège">HEPL</abbr>, Seraing</a></li>
 						<li><a title="Aller vers la section de mes formations" href="#formations" hreflang="fr">Formation en ligne :&nbsp;<abbr lang="fr" title="Deux Dimensions">2D</abbr></a></li>
 						<li><a title="Aller vers la section de mes formations" href="#formations" hreflang="fr">&Eacute;tudes sup&eacute;rieures :&nbsp;Sainte&ndash;Croix, Li&egrave;ge</a></li>
@@ -75,9 +74,9 @@
 
 				<li id="fourth_nav_list_item">
 					Mes langages maîtris&eacute;s
-					<img id="nav_fourth_arrow" src="assets/icons/fleche.svg" alt="Une croix blanche" width="16" height="10">
+					<img class="arrow" id="nav_fourth_arrow" src="assets/icons/fleche.svg" alt="Une croix blanche" width="16" height="10">
 
-					<ul class="no_display" id="fourth_dropdown">
+					<ul class="no-js-dropdown no_display" id="fourth_dropdown">
 						<li><a title="Aller vers la section de mes langages maîtrisés" href="#langages" hreflang="fr"><abbr lang="en" title="Hyper Text Markup Language">HTML</abbr></a></li>
 						<li><a title="Aller vers la section de mes langages maîtrisés" href="#langages" hreflang="fr"><abbr lang="en" title="Cascading Style Sheet">CSS</abbr></a></li>
 						<li><a title="Aller vers la section de mes langages maîtrisés" href="#langages" hreflang="fr">JavaScript</a></li>
@@ -88,9 +87,9 @@
 
 				<li id="fifth_nav_list_item">
 					Mes soft skills
-					<img id="nav_fifth_arrow" src="assets/icons/fleche.svg" alt="Une croix blanche" width="16" height="10">
+					<img class="arrow" id="nav_fifth_arrow" src="assets/icons/fleche.svg" alt="Une croix blanche" width="16" height="10">
 
-					<ul class="no_display" id="fifth_dropdown">
+					<ul class="no-js-dropdown no_display" id="fifth_dropdown">
 						<li><a title="Aller vers la section de mes soft skills" href="#soft_skills" hreflang="fr">Cr&eacute;ativit&eacute;</a></li>
 						<li><a title="Aller vers la section de mes soft skills" href="#soft_skills" hreflang="fr">Recherche</a></li>
 						<li><a title="Aller vers la section de mes soft skills" href="#soft_skills" hreflang="fr">Organisation</a></li>
