ajout de fichiers manquants

--- a/cv_site/index.html
+++ b/cv_site/index.html
@@ -545,6 +545,6 @@
 		</ul>
 
 	</footer>
-	<!--<script type="module" src="./js/main.js"></script>!-->
+	<script type="module" src="./js/main.js"></script>
 </body>
 </html>
