Fix no-js (hobbies + basket) + optimisation javascript

--- a/cv_site/index.html
+++ b/cv_site/index.html
@@ -118,7 +118,7 @@
 					<span class="line">|</span>
 				</label>
 				<p id="content" class="banner-content">Pour pouvoir utiliser toutes les fonctionnalit&eacute;s du site, veuillez activer Javascript.
-					<a href="https://support.google.com/adsense/answer/12654?hl=fr" hreflang="fr" title="Activer Javascript sur son navigateur">Activer Javascript sur son navigateur</a>
+					<a href="https://support.google.com/adsense/answer/12654?hl=fr" hreflang="fr" title="Activer Javascript sur mon navigateur">Activer Javascript sur mon navigateur</a>
 				</p>
 
 			</div>
@@ -141,14 +141,14 @@
 					<li id="choice">Choississez un service</li>
 					<li>
 						<ul id="services_list">
-							<li id="www" data-name="Créer votre site web"><img id="www_image" src="assets/icons/www.svg" alt="Image du World Wide Web" width="55" height="39"></li>
-							<li id="pencil" data-name="Styliser votre site web"><img id="pencil_image" src="assets/icons/design.svg" alt="Image d'un pinceau" width="55" height="39"></li>
-							<li id="responsive" data-name="Rendre votre site responsive"><img id="responsive_image" src="assets/icons/responsive.svg" alt="Image d'un PC, d'une tablette et d'un téléphone" width="55" height="39"></li>
-							<li id="ranking" data-name="Améliorer le référencement de votre site"><img id="ranking_image" src="assets/icons/referencement.svg" alt="Image d'une loupe" width="55" height="39"></li>
+							<li title="Créer votre site web" lang="fr" id="www" data-name="Créer votre site web"><img id="www_image" src="assets/icons/www.svg" alt="Image du World Wide Web" width="55" height="39"></li>
+							<li title="Créer un design pour votre site" lang="fr" id="pencil" data-name="Créer un design pour votre site"><img id="pencil_image" src="assets/icons/design.svg" alt="Image d'un pinceau" width="55" height="39"></li>
+							<li title="Rendre votre site accessible sur mobile" lang="fr" id="responsive" data-name="Rendre votre site accessible sur mobile"><img id="responsive_image" src="assets/icons/responsive.svg" alt="Image d'un PC, d'une tablette et d'un téléphone" width="55" height="39"></li>
+							<li title="Améliorer le référencement de votre site" lang="fr" id="ranking" data-name="Améliorer le référencement de votre site"><img id="ranking_image" src="assets/icons/referencement.svg" alt="Image d'une loupe" width="55" height="39"></li>
 						</ul>
 					</li>
 
-					<li><p title="Aller vers la section pour me contacter" id="contact">Me contacter</p></li><!--
+					<li><a href="#no-js-basket" title="Aller vers la section pour me contacter" id="contact">Me contacter</a></li><!--
 
 					--><li><img id="projects_number" src="assets/ref/projets.svg" alt="Image PEGI" height="80" width="60"></li>
 
@@ -203,7 +203,7 @@
 						<ul>
 							<li><img id="hepl_logo" src="assets/ref/hepl.jpeg" srcset="assets/ref/hepl_1000.png 1000w, assets/ref/hepl.jpeg 4096w" sizes="(min-width: 1500px) 30.5%, (max-width: 750px) 100vh" alt="Image du logo de la HEPL"></li>
 
-							<li><h3>&Eacute;tudes sup&eacute;rieures :&nbsp;<abbr lang="fr" title="Haute Ecole de la Province de Liège">HEPL</abbr>, Seraing</h3></li>
+							<li><p>&Eacute;tudes sup&eacute;rieures :&nbsp;<abbr lang="fr" title="Haute Ecole de la Province de Liège">HEPL</abbr>, Seraing</p></li>
 
 							<li>
 								<p>
@@ -221,7 +221,7 @@
 
 							<li><img id="online_training" src="assets/ref/formation.png" alt="Image du texte online training" srcset="assets/ref/formation_2000.png 2000w, assets/ref/formation_1200.png 1200w, assets/ref/formation.png 380w" sizes="(min-width: 1500px) 30.5%, (max-width: 750px) 100vh"></li>
 
-							<li><h3>Formation en ligne :&nbsp;<abbr lang="fr" title="Deux dimensions">2D</abbr></h3></li>
+							<li><p>Formation en ligne :&nbsp;<abbr lang="fr" title="Deux dimensions">2D</abbr></p></li>
 
 							<li>
 								<p>
@@ -239,7 +239,7 @@
 
 							<li><img id="sainte_croix" src="assets/ref/helmo.png" alt="Logo de HELMO" srcset="assets/ref/helmo_2000.png 2000w, assets/ref/helmo_1000.png 1000w, assets/ref/helmo.png 360w" sizes="(min-width: 1500px) 30.5%, (max-width: 750px) 100vh"></li>
 
-							<li><h3>&Eacute;tudes sup&eacute;rieures :&nbsp;Sainte&ndash;Croix, Li&egrave;ge</h3></li>
+							<li><p>&Eacute;tudes sup&eacute;rieures :&nbsp;Sainte&ndash;Croix, Li&egrave;ge</p></li>
 
 							<li>
 								<p>
@@ -257,7 +257,7 @@
 
 							<li><img id="saint_louis" src="assets/ref/secondaire.jpeg" alt="Photo de l'école de Saint-Louis" srcset="assets/ref/secondaire_1200.jpg 1200w, assets/ref/secondaire.jpeg 2560w" sizes="(min-width: 1500px) 30.5%, (max-width: 750px) 100vh"></li>
 
-							<li><h3>&Eacute;tudes secondaires :&nbsp;Saint&ndash;Louis, Waremme</h3></li>
+							<li><p>&Eacute;tudes secondaires :&nbsp;Saint&ndash;Louis, Waremme</p></li>
 
 							<li>
 								<p>
@@ -355,17 +355,17 @@
 
 		<section id="hobbies">
 
-			<h1 class="hidden">Mes hobbies</h1>
+			<h1 class="hidden no-js-title">Mes hobbies</h1>
 
-			<img id="hobbies_button" src="assets/ref/hobby.svg" width="90" height="90" alt="La lettre H dans une étoile">
+			<img class="no-js-hobbies_button" id="hobbies_button" src="assets/ref/hobby.svg" width="90" height="90" alt="La lettre H dans une étoile">
 			<div id="overlay" class="no_display"></div>
-			<ul class="no_display" id="hobbies_list">
+			<ul class="no_display no-js-hobbies_list" id="hobbies_list">
 
-				<li><img id="close2" src="assets/icons/croixblanche.svg" alt="Une croix blanche" width="13" height="13"></li>
+				<li><img class="no-js-close" id="close2" src="assets/icons/croixblanche.svg" alt="Une croix blanche" width="13" height="13"></li>
 
 				<li>
 
-					<h2>Gaming</h2>
+					<p>Gaming</p>
 
 					<p>
 						Le gaming est ma passion la plus folle. Je pratique le gaming depuis plus de 10 ans. J&rsquo;ai d&eacute;couvert cette passion gr&acirc;ce &agrave; mon voisin qui m&rsquo;a initi&eacute; au fameux &laquo;&nbsp;Age of empires&nbsp;&raquo; qui a donc &eacute;t&eacute; mon premier jeu sur PC. Je joue &agrave; diff&eacute;rents types de jeux :&nbsp;du jeu d&rsquo;aventure au jeu d&rsquo;action en passant par les jeux de strat&eacute;gie.
@@ -377,7 +377,7 @@
 
 				<li>
 
-					<h2>Tir &agrave; l&rsquo;arc</h2>
+					<p>Tir &agrave; l&rsquo;arc</p>
 
 					<p>
 						Pratiquer le tir &agrave; l&rsquo;arc est assez r&eacute;cent dans ma vie :&nbsp;je le pratique que depuis un peu plus d&rsquo;un an. Je tire &agrave; la Compagnie Royale D&rsquo;archers se situant &agrave; Li&egrave;ge.
@@ -389,7 +389,7 @@
 
 				<li>
 
-					<h2>Histoire</h2>
+					<p>Histoire</p>
 
 					<p>
 						L&rsquo;histoire est ma passion cach&eacute;e depuis mon plus jeune &acirc;ge. D&eacute;couverte par hasard, lors de l&rsquo;achat d&rsquo;un jeu&ndash;vid&eacute;o, je me concentre plus sur l&rsquo;histoire antique.
@@ -405,7 +405,7 @@
 
 		<section id="panier">
 
-			<h1 class="hidden">Mon panier</h1>
+			<h1 class="hidden no-js-title">Mon panier</h1>
 
 			<div id="second_overlay" class="no_display"></div>
 
@@ -488,6 +488,11 @@
 
 			</ul>
 
+			<div id="no-js-basket" class="no-display no-js-basket">
+				<p>Veuillez activer Javascript pour utiliser votre panier</p>
+				<a href="https://support.google.com/adsense/answer/12654?hl=fr" hreflang="fr" title="Activer Javascript sur mon navigateur">Activer Javascript sur mon navigateur</a>
+			</div>
+
 		</section>
 
 	</main>
@@ -545,6 +550,7 @@
 		</ul>
 
 	</footer>
+
 	<script type="module" src="./js/main.js"></script>
 </body>
 </html>
